# weather-coord

./: README.md  pyproject.toml  requirements.txt
scripts/: bulk_download.py  top_cities_with_capitals.csv
src/weather_cli/: __init__.py  cli.py  delete.py  download.py  list.py  process_data.py  refresh_db.py  report.py  report_aggregate.py  report_func.py
tests/: .gitignore  test_cli.py  test_delete.py  test_download.py  test_integrity.py  test_list.py  test_process_data.py  test_refresh_db.py  test_report.py  test_report_aggregate.py
